examples/test/testpolicy1048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1048
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key47: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value33
          key24: value15
      podSelector:
        matchLabels:
          key16: value28
          key49: value45
